# AI-Powered-Academic-Paper-Summarizer

./: .env  .env.example  ARCHITECTURE.md  README.md  documentation.md  pyproject.toml  reset_db.py
app/: Home.py  __init__.py  config.py  database.py  styles.py
app/models/: __init__.py  base.py  chunk.py  paper.py  query_cache.py
app/pages/: 1_📄_Upload_Papers.py  2_❓_Ask_Questions.py  3_📝_View_Summaries.py
app/services/: __init__.py  chunking_service.py  compression_service.py  embedding_service.py  generation_service.py  pdf_service.py  retrieval_service.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
tests/: test_chunking.py  test_compression.py  test_generation.py  test_retrieval.py
